base/sward-warden/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sward-warden-dev
  labels:
    toolkit.fluxcd.io/tenant: app
    istio-injection: enabled
    app.kubernetes.io/part-of: flux
    monitoring/prometheus-stack: dev
